# Retibia.app-Server

./: .gitignore  CMakeLists.txt  config.lua
cmake/: FindCXX11.cmake
data/: global.lua  storageValues.lua
data/XML/: groups.xml  outfits.xml  vocations.xml
data/actions/: actions.xml
data/actions/scripts/: no_move.lua  randomized_chests.lua  temple_setCitizenship.lua
data/chatchannels/: chatchannels.xml
data/chatchannels/scripts/: combatLog.lua  deathchannel.lua
data/creaturescripts/: creaturescripts.xml
data/creaturescripts/scripts/: extendedopcode.lua
data/events/: events.xml
data/events/scripts/: creature.lua  monster.lua  party.lua  player.lua
data/globalevents/: globalevents.xml
data/globalevents/scripts/: startup.lua  startup_cleanup.lua  startup_item_creation_on_map.lua
data/items/1098/: items.xml
data/lib/: gameConfig.lua  lib.lua  spellConfig.lua
data/lib/compat/: compat.lua
data/lib/core/: core.lua  discord.lua  player.lua
data/lib/debug/: functions.lua
data/lib/locationData/: rookgaard.lua
data/migrations/: 32.lua  33.lua  34.lua  35.lua  36.lua  37.lua  38.lua
data/modules/: modules.xml
data/modules/scripts/: self_report.lua
data/monster/: monsters.xml
data/monster/_custom/: demigod_punish.xml  strong_rottie_the_rotworm.xml  strong_teleskor.xml  training_device.xml  weard_dragon_statue.xml
data/monster/custom/: dark_elf.xml  demigod_punish.xml  elder_dragon.xml  strong_teleskor.xml  strong_wailing_widow.xml
data/monster/lua/: #example.lua
data/movements/: movements.xml
data/movements/scripts/: StepInAchivement.lua
data/npc/: Angus.xml  Blessed Aria.xml  Blind Orc.xml  Cipfried.xml  Clyde.xml  Dixi.xml  Ferks.xml  Gail.xml  Lee'Delle.xml  Lily.xml  Loui.xml  Paulie.xml  Rashid.xml  Ray.xml  Romero.xml  Seymour.xml  Statue_RogueVocation.xml  Tandros.xml  Tenebrus.xml  Yasir.xml
data/npc/lib/: npc.lua
data/raids/: raids.xml  testraid.xml
data/scripts/: death_channel_post_messages.lua
data/spells/: spells.xml
data/talkactions/: talkactions.xml
data/weapons/: weapons.xml
data/world/: rookgaard-house.xml  rookgaard-spawn.xml  rookgaard-spawn.xml.backup
libs/: register_tfssdk_env.bat
libs/DPP/: CMakeLists.txt
src/: CMakeLists.txt  _tfs.rc  const.h  creature.cpp  creature.h  definitions.h  discord.cpp  discord.h  enums.h  game.cpp  game.h  iologindata.cpp  luascript.cpp  luascript.h  monster.cpp  monster.h  monsters.cpp  npc.cpp  npc.h  otserv.cpp  player.cpp  player.h  protocolgame.cpp  protocolgame.h  script.cpp  spawn.cpp  spells.cpp  spells.h  talkaction.cpp  talkaction.h  tile.h  tools.cpp
vc14/: theforgottenserver.vcxproj
(+258 files in other folders)
